[package]
name = "proxied"
version = "0.3.4"
edition = "2021"
description = "Asynchronous client connector for proxies"
license = "MIT"
repository = "https://github.com/hdbg/proxied"
categories = ["asynchronous", "network-programming"]
keywords = ["proxy", "async", "http", "socks", "client"]
authors = ["hdbg"]
documentation = "https://docs.rs/proxied"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-http-proxy = { version = "1.2.5", features = ["basic-auth", "runtime-tokio", "tokio"] }
fast-socks5 = "0.9.6"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.38.0", features = ["io-util", "net"] }
uri = "0.4.0"

[dev-dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
