[package]
name = "proxied"
version = "1.1.0"
edition = "2021"
description = "Asynchronous client connector for proxies"
license = "MIT"
repository = "https://github.com/hdbg/proxied"
categories = ["asynchronous", "network-programming"]
keywords = ["proxy", "async", "http", "socks", "client"]
authors = ["hdbg"]
documentation = "https://docs.rs/proxied"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-http-proxy = { version = "1.2.5", features = ["basic-auth", "runtime-tokio", "tokio"] }
fast-socks5 = "0.9.6"
reqwest = { version = "0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.45.1", features = ["io-util", "net"] }
uri = "0.4.0"

[dev-dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
reqwest = ["dep:reqwest"]
